// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSearchBox render - custom placeholder and incremental 1`] = `
<EuiFieldSearch
  defaultValue=""
  fullWidth={true}
  incremental={true}
  inputRef={[Function]}
  isLoading={false}
  onSearch={[Function]}
  placeholder="..."
/>
`;

exports[`EuiSearchBox render - no config 1`] = `
<EuiFieldSearch
  defaultValue=""
  fullWidth={true}
  incremental={false}
  inputRef={[Function]}
  isLoading={false}
  onSearch={[Function]}
  placeholder="Search..."
/>
`;
